# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

ohos_unittest("b_anony_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [ "b_anony/b_anony_test.cpp" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [ "hilog:libhilog" ]

  defines = [ "private = public" ]

  use_exceptions = true
}

ohos_unittest("b_anony_ut_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [ "b_anony/b_anony_ut_test.cpp" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [ "hilog:libhilog" ]

  defines = [ "private = public" ]

  use_exceptions = true
}

ohos_unittest("b_error_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [ "b_error/b_error_test.cpp" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  defines = [ "private = public" ]

  use_exceptions = true
}

ohos_unittest("b_error_ut_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [ "b_error/b_error_ut_test.cpp" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  defines = [ "private = public" ]

  use_exceptions = true
}

ohos_unittest("b_dir_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [
    "b_filesystem/b_dir_test.cpp",
  ]

  include_dirs = [
    "${path_backup}/utils/src/b_filesystem",
  ]

  deps = [
    "${path_backup}/interfaces/innerkits/native:sandbox_helper_native",
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
    "googletest:gmock_main",
  ]

  use_exceptions = true
}

ohos_unittest("b_dir_sub_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${path_backup}/cfi_blocklist.txt"
  }

  module_out_path = path_module_out_tests

  sources = [
    "${path_backup}/tests/mock/library_func_mock/library_func_mock.cpp",
    "b_filesystem/b_dir_sub_test.cpp"
  ]

  include_dirs = [
    "${path_backup}/utils/src/b_filesystem",
    "${path_backup}/tests/mock/library_func_mock",
  ]

  deps = [
    "${path_backup}/interfaces/innerkits/native:sandbox_helper_native",
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
    "googletest:gmock_main",
  ]

  defines = [ "private=public" ]
  use_exceptions = true
}

ohos_unittest("b_file_hash_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [
    "b_filesystem/b_file_hash_test.cpp",
  ]

  include_dirs = [ "${path_backup}/utils/src/b_filesystem" ]

  deps = [
    "${path_backup}/interfaces/innerkits/native:sandbox_helper_native",
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  use_exceptions = true
}

ohos_unittest("b_file_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [
    "b_filesystem/b_file_test.cpp",
  ]

  include_dirs = [ "${path_backup}/utils/src/b_filesystem" ]

  deps = [
    "${path_backup}/interfaces/innerkits/native:sandbox_helper_native",
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  use_exceptions = true
}

ohos_unittest("b_jsonutil_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [ "b_jsonutil/b_jsonutil_test.cpp" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  use_exceptions = true
}

ohos_unittest("b_jsonutil_ut_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [ "b_jsonutil/b_jsonutil_ut_test.cpp" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  use_exceptions = true
}

ohos_unittest("b_json_test") {
  branch_protector_ret = "pac_ret"

  module_out_path = path_module_out_tests

  sources = [
    "${path_backup}/utils/src/b_json/b_json_entity_extension_config.cpp",
    "${path_backup}/utils/src/b_json/b_json_service_disposal_config.cpp",
    "b_json/b_json_cached_entity_test.cpp",
    "b_json/b_json_entity_ext_manage_test.cpp",
    "b_json/b_json_entity_extension_config_test.cpp",
    "b_json/b_json_entity_onbackupex_ret_test.cpp",
    "b_json/b_json_service_disposal_config_test.cpp",
    "b_json/b_report_entity_test.cpp",
  ]
  sources += backup_mock_parameter_src

  include_dirs = [ "${path_backup}/utils" ]
  include_dirs += backup_mock_parameter_include_dirs

  deps = [
    "${path_backup}/interfaces/innerkits/native:sandbox_helper_native",
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  defines = [
    "LOG_TAG=\"app_file_service\"",
    "LOG_DOMAIN=0xD004303",
    "private = public",
    "protected = public",
  ]

  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  use_exceptions = true
}

ohos_unittest("b_tarball_cmdline_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [
    "${path_backup_mock}/b_process/b_process_mock.cpp",
    "b_tarball/b_tarball_cmdline_test.cpp",
  ]

  include_dirs = [ "${path_backup}/utils/include" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]

  use_exceptions = true
}

ohos_unittest("b_tarball_factory_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [
    "${path_backup_mock}/b_tarball/b_tarball_cmdline_mock.cpp",
    "b_tarball/b_tarball_factory_test.cpp",
  ]

  include_dirs = [ "${path_backup}/utils/include" ]

  deps = [ "${path_backup}/tests/utils:backup_test_utils" ]
  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
  ]
  use_exceptions = true
}

ohos_unittest("b_process_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [ "b_process/b_process_test.cpp" ]

  include_dirs = [ "${path_backup}/utils/include" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  use_exceptions = true
}

ohos_unittest("b_process_ut_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = path_module_out_tests

  sources = [ "b_process/b_process_ut_test.cpp" ]

  include_dirs = [ "${path_backup}/utils/include" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  use_exceptions = true
}

ohos_unittest("b_json_other_test") {
  module_out_path = path_module_out_tests

  sources = [
    "${path_backup}/tests/mock/cJson/src/cJsonMock.cpp",
    "${path_backup}/tests/unittests/backup_utils/b_json/b_json_service_disposal_config_other_test.cpp",
  ]
  sources += backup_mock_parameter_src

  include_dirs = [
    "${path_backup}/utils",
    "${path_backup}/tests/mock/cJson/include",
    "${path_backup}/utils/src/b_json",
  ]
  include_dirs += backup_mock_parameter_include_dirs

  deps = [
    "${path_backup}/interfaces/innerkits/native:sandbox_helper_native",
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  defines = [
    "LOG_TAG=\"app_file_service\"",
    "LOG_DOMAIN=0xD004303",
    "private = public",
    "protected = public",
  ]

  use_exceptions = true
}

ohos_unittest("b_jsonutil_other_test") {
  module_out_path = path_module_out_tests

  sources = [
    "${path_backup}/tests/mock/cJson/src/cJsonMock.cpp",
    "${path_backup}/tests/unittests/backup_utils/b_jsonutil/b_jsonutil_other_test.cpp",
  ]
  sources += backup_mock_parameter_src

  include_dirs = [
    "${path_backup}/utils",
    "${path_backup}/tests/mock/cJson/include",
    "${path_backup}/utils/src/b_jsonutil",
  ]
  include_dirs += backup_mock_parameter_include_dirs

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  defines = [
    "LOG_TAG=\"app_file_service\"",
    "LOG_DOMAIN=0xD004303",
    "private = public",
    "protected = public",
  ]

  use_exceptions = true
}

ohos_unittest("b_json_clear_data_test") {
  module_out_path = path_module_out_tests

  sources = [
    "${path_backup}/tests/mock/cJson/src/cJsonMock.cpp",
    "${path_backup}/tests/unittests/backup_utils/b_json/b_json_clear_data_config_test.cpp",
  ]
  sources += backup_mock_parameter_src

  include_dirs = [
    "${path_backup}/utils",
    "${path_backup}/tests/mock/cJson/include",
    "${path_backup}/utils/src/b_json",
  ]
  include_dirs += backup_mock_parameter_include_dirs

  deps = [
    "${path_backup}/interfaces/innerkits/native:sandbox_helper_native",
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  defines = [
    "LOG_TAG=\"app_file_service\"",
    "LOG_DOMAIN=0xD004303",
    "private = public",
    "protected = public",
  ]

  use_exceptions = true
}

ohos_unittest("b_utils_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${path_backup}/cfi_blocklist.txt"
  }

  module_out_path = path_module_out_tests

  sources = [
    "b_utils\scan_file_singleton_test.cpp",
    "b_utils\string_utils_test.cpp",
    "b_utils\b_time_test.cpp",
  ]

  include_dirs = [ "${path_backup}/utils/src/b_utils" ]

  deps = [
    "${path_backup}/interfaces/innerkits/native:sandbox_helper_native",
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
    "init:libbegetutil",
  ]
  defines = [ "private = public" ]
  use_exceptions = true
}

ohos_unittest("b_radar_test") {
  module_out_path = path_module_out_tests

  sources = [
    "${path_backup}/tests/unittests/backup_utils/b_radar/b_radar_test.cpp",
  ]
  sources += backup_mock_parameter_src

  include_dirs = [
    "${path_backup}/utils",
    "${path_backup}/tests/mock/b_radar/include",
  ]
  include_dirs += backup_mock_parameter_include_dirs

  deps = [
    "${path_backup}/interfaces/innerkits/native:sandbox_helper_native",
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]

  defines = [
    "LOG_TAG=\"app_file_service\"",
    "LOG_DOMAIN=0xD004303",
    "private = public",
    "protected = public",
  ]

  use_exceptions = true
}

group("backup_utils_test") {
  testonly = true

  deps = [
    ":b_anony_test",
    ":b_anony_ut_test",
    ":b_error_test",
    ":b_error_ut_test",
    ":b_dir_test",
    ":b_dir_sub_test",
    ":b_file_hash_test",
    ":b_file_test",
    ":b_json_clear_data_test",
    ":b_json_other_test",
    ":b_json_test",
    ":b_jsonutil_other_test",
    ":b_jsonutil_test",
    ":b_jsonutil_ut_test",
    ":b_process_test",
    ":b_process_ut_test",
    ":b_radar_test",
    ":b_tarball_cmdline_test",
    ":b_tarball_factory_test",
    ":b_utils_test",
  ]
}
